--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,4 +40,6 @@ steps:
       SourceFolder: deployment
       Contents: '*.json'
       TargetFolder: $(build.artifactstagingdirectory)/Templates
+  - task: PublishBuildArtifacts@1
+    displayName: 'Publish Artifact: drop'
 
